<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/player_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player_one"
        android:textSize="15sp"
        android:layout_marginTop="120dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/player_2"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/first_player_score"
        android:layout_width="16dp"
        android:layout_height="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/second_player_score"
        app:layout_constraintTop_toBottomOf="@id/player_1"
        app:layout_constraintBottom_toTopOf="@id/tic_tac_toe" />


    <EditText
        android:id="@+id/player_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player_two"
        android:textSize="15sp"
        android:layout_marginTop="120dp"
        app:layout_constraintLeft_toRightOf="@id/player_1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/second_player_score"
        android:layout_width="16dp"
        android:layout_height="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/first_player_score"
        app:layout_constraintTop_toBottomOf="@id/player_2"
        app:layout_constraintBottom_toTopOf="@id/dice_roller"/>

    <Button
        android:id="@+id/tic_tac_toe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tic_tac_toe"
        android:layout_marginTop="168dp"
        app:layout_constraintTop_toBottomOf="@id/player_1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/dice_roller"/>

    <Button
        android:id="@+id/dice_roller"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dice_roller"
        android:layout_marginTop="168dp"
        app:layout_constraintTop_toBottomOf="@id/player_1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/tic_tac_toe"/>

   <Button
       android:id="@+id/add_player"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/add_player"
       app:layout_constraintTop_toBottomOf="@id/tic_tac_toe"
       app:layout_constraintLeft_toLeftOf="parent"
       app:layout_constraintRight_toRightOf="parent"
       app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>